--- a/sell-on-uiboat.html
+++ b/sell-on-uiboat.html
@@ -29,24 +29,21 @@
     <title>Create passive income as a designer | UIBoat</title>
 
 </head>
-<body>
+<body  class="flex-row-gap-96">
 
     <!--Navigation bar-->
     <div id="nav-placeholder">
     </div>
    
 
-    
-   
-<div class="container">
-    <section class="productFlex">
-    <h1 style="margin: 0;">Sell your design products on UIBoat</h1>
+    <section>
+    <h1>Sell your design<br>products on UIBoat</h1>
 
-    <p style="max-width: 60vw; text-align: center;">Everything on this marketplace is sold via Gumroad. If you are interested to sell your products on our platform send an email to: <a href="mailto:uiboat.kits@gmail.com">uiboat.kits@gmail.com</a></p>
+    <p style="max-width: 60vw; padding-left: 64px;">Everything on this marketplace is sold via an affiliate program. If you are interested to sell your products on our platform send an email to: <a href="mailto:uiboat.kits@gmail.com">uiboat.kits@gmail.com</a></p>
 
-    <img class="productIMG" src="../images/general/sell-banner.png" alt="UIBoat banner">
-        </section>
-</div>
+  
+  </section>
+
 
 
 <div id="footer-placeholder">
