--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
     </div>
   </article>
   <article class="flex-row-gap-32">
-    <img onclick="window.open('https://gumroad.com/a/977801043/bHAJr')" src="../assets/products/landify.jpg" alt="Landify kit for landing pages">
+    <img onclick="window.open('https://uiboat.gumroad.com/l/uijxj')" src="../assets/products/designconnect.jpg" alt="Design Connect - Figma template">
     <div class="flex-row-gap-8">
-      <h5>Landify</h5>
-      <p>Landing page UI kit</p>
+      <h5>Design Connect</h5>
+      <p>Figma template</p>
     </div>
   </article>
 </section>
