--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -218,6 +218,14 @@
         </div>
       </section>
 
+      <section class="post freebies kits flex-row-gap-32">
+        <img onclick="window.open('https://uiboat.gumroad.com/l/uijxj')" src="../assets/products/designconnect_thumb.jpg" alt="Design Connect - Figma template">
+        <div class="flex-row-gap-8">
+          <h6>Design Connect</h6>
+          <p>Figma template</p>
+        </div>
+      </section>
+
 
 </div>    
 
