--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
     </div>
   </article>
   <article class="flex-row-gap-32">
-    <img onclick="window.open('https://uiboat.gumroad.com/l/uijxj')" src="../assets/products/designconnect.jpg" alt="Design Connect - Figma template">
+    <img onclick="window.open('https://uiboat.gumroad.com/l/ivgjh')" src="../assets/products/galileoai.jpg" alt="Galileo AI file and tutorial">
     <div class="flex-row-gap-8">
-      <h5>Design Connect</h5>
-      <p>Figma template</p>
+      <h5>Galileo AI</h5>
+      <p>Galileo AI file and tutorial</p>
     </div>
   </article>
 </section>
