--- a/pages/catalog.html
+++ b/pages/catalog.html
@@ -226,6 +226,14 @@
         </div>
       </section>
 
+      <section class="post freebies kits flex-row-gap-32">
+        <img onclick="window.open('https://uiboat.gumroad.com/l/ivgjh')" src="../assets/products/galileoai_thumb.jpg" alt="Galileo AI file and tutorial">
+        <div class="flex-row-gap-8">
+          <h6>Galileo AI</h6>
+          <p>Galileo AI file and tutorial</p>
+        </div>
+      </section>
+
 
 </div>    
 
